--- a/.gitignore
+++ b/.gitignore
@@ -2,36 +2,24 @@
 
 node_modules/
 .cache/
-public
+public/
 .vscode
 .DS_Store
 .env
 .env.development
-dist
+dist/
 
 # .GITIGNORE FROM HELLO-STARTER
 # Logs
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
 
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directories
 node_modules/
-jspm_packages/
 
 # Optional npm cache directory
 .npm
@@ -39,18 +27,11 @@ jspm_packages/
 # Optional eslint cache
 .eslintcache
 
-# Optional REPL history
-.node_repl_history
-
 # dotenv environment variable files
 .env*
 
 # Mac files
 .DS_Store
 
-# Yarn
-yarn-error.log
 .pnp/
 .pnp.js
-# Yarn Integrity file
-.yarn-integrity
