--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@splidejs/splide": "^4.0.0",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.5.9",
     "mongodb": "^6.5.0",
     "react": "^18.2.0",
