--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/fira-sans": "^5.1.1",
     "@fontsource/rubik": "^5.1.1",
     "@splidejs/splide": "^4.1.4",
+    "@tailwindcss/postcss": "^4.0.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vercel/speed-insights": "^1.2.0",
