--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@fontsource/rubik": "^5.1.1",
     "@splidejs/splide": "^4.1.4",
     "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/vite": "^4.0.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.3.1",
     "mongodb": "^6.13.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
