--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "services": "brew services list"
   },
   "dependencies": {
-    "@astrojs/db": "^0.14.6",
+    "@astrojs/db": "^0.18.2",
     "@astrojs/mdx": "^4.0.8",
     "@astrojs/react": "^4.2.0",
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource/fira-sans": "^5.1.1",
     "@fontsource/rubik": "^5.1.1",
     "@splidejs/splide": "^4.1.4",
-    "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.3.1",
-    "mongodb": "^6.13.1",
+    "mongodb": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sharp": "^0.33.5",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.0.8"
   }
 }
