--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.3.1",
+    "destyle.css": "^4.0.1",
     "mongodb": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
