--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "@astrojs/db": "^0.18.2",
     "@astrojs/mdx": "^4.0.8",
     "@astrojs/react": "^4.2.0",
-    "@astrojs/tailwind": "^6.0.0",
     "@fontsource/fira-sans": "^5.1.1",
     "@fontsource/rubik": "^5.1.1",
     "@splidejs/splide": "^4.1.4",
-    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.3.1",
@@ -30,7 +28,6 @@
     "mongodb": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sharp": "^0.34.5",
-    "tailwindcss": "^4.0.8"
+    "sharp": "^0.34.5"
   }
 }
